feat: add gradle profiles setting & README.md
- README.md
- build.gradle
- src/main/resource/...
-- application.yaml
-- application-local.yaml
-- application-sihwaaaaa.yaml

--- a/build.gradle
+++ b/build.gradle
@@ -39,3 +39,7 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+bootRun{
+	systemProperty "spring.profiles.active", System.getProperty('spring.profiles.active')
+}
