--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.2'
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-	implementation group: 'jstl', name: 'jstl', version: '1.2'
-
-
-
+implementation 'jakarta.servlet:jakarta.servlet-api'
+implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api'
+implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl'
 
 
 }
